# uncertain_panda

./: .bumpversion.cfg  .coveragerc  .travis.yml  README.rst  pyproject.toml
docs/: conf.py  index.rst
docs/pages/: api.rst  bootstrapping.rst  examples.rst
tests/: fixtures.py  test_asym.py  test_numerics.py  test_pandas.py  test_plotting.py  test_uncertainty_calculations.py
uncertain_panda/: __init__.py  pandas.py
uncertain_panda/bootstrapping/: bootstrapper.py  calculation.py  functions.py
uncertain_panda/plotting/: helpers.py
uncertain_panda/uncertainties/: __init__.py  bootstrap_result.py  calculation.py  calculators.py  functions.py
uncertain_panda/utils/: numerics.py  pandas_utils.py
